smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/statement-unknown.smithy
// Parse error at line 7, column 8 near ` String`: Unexpected shape type: invalid
// ^ The list of expected tokens goes on, but it's been trimmed here to help reduce the
// number of time this test will need to be updated if/when the syntax changes.
namespace foo.bar

// "invalid" is not a known statement.
invalid String
